project links done

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"> 
+    <script src="https://kit.fontawesome.com/e776c36ee4.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/style.css"> 
     <title>Document</title>
 </head>
 <body>
 <nav class='topNav'>
     <ul class='listNav'>
         <li><a href=#>Main</a></li>
-        <li><a href=#>About</a></li>
+        <li><a href='/assets/page/about.html'>About</a></li>
         <li><a href=#>Contact</a></li>
     </ul>
 </nav>
@@ -20,36 +21,55 @@
         <h1 class='name'>Ripan Cosmin</h1>
         <a href=# class='resume'>Resume</a>
         <div class='socials'>
-            <a href=#>Github</a>
-            <a href=#>LinkedIn</a>
+            <a href=#><i class="fab fa-github fa-2x"></i></a>
+            <a href=#><i class="fab fa-linkedin-in fa-2x"></i></a>
         </div>
     </div> 
     <div class='projectsContainer'>
         <div class='project'>
-            <img src=# alt='image of first project' class='screenshot'>
-            <a href=# class='live'>Live Code</a>
-            <a href=# class='code'>Git Hub</a>
+            <h3 class='projectName'>Rock Paper Robots</h3>
+            <img src='assets/images/rockpaperrobots.png'
+             alt='image of first project' class='screenshot'>
+             <a class='live' href=#>
+                <i class="fa fa-eye"></i>
+                <p class='liveLink'>Live Code</p>
+            </a>
+            <a class='code' href=#>
+                <i class="fab fa-github"></i>
+                <p class='gitLink'>Github</p>
+            </a>
         </div>
         <div class='project'>
-            <img src=# alt='image of second project' class='screenshot'>
-            <a href=# class='live'>Live Code</a>
-            <a href=# class='code'>Git Hub</a>
+            <h3 class='projectName'>Paint-It</h3>
+            <img src='assets/images/paintit.png'
+             alt='image of second project' class='screenshot'>
+             <a class='live' href=#>
+                <i class="fa fa-eye"></i>
+                <p class='liveLink'>Live Code</p>
+            </a>
+            <a class='code' href=#>
+                <i class="fab fa-github"></i>
+                <p class='gitLink'>Github</p>
+            </a>
         </div>
         <div class='project'>
-            <img src=# alt='image of third project' class='screenshot'>
-            <a href=# class='live'>Live Code</a>
-            <a href=# class='code'>Git Hub</a>
-        </div>
-        <div class='project'>
-            <img src=# alt='image of fourth project' class='screenshot'>
-            <a href=# class='live'>Live Code</a>
-            <a href=# class='code'>Git Hub</a>
+            <h3 class='projectName'>Calculator</h3>
+            <img src='assets/images/calculator.png'
+             alt='image of third project' class='screenshot'>
+             <a class='live' href=#>
+                <i class="fa fa-eye"></i>
+                <p class='liveLink'>Live Code</p>
+            </a>
+            <a class='code' href=#>
+                <i class="fab fa-github"></i>
+                <p class='gitLink'>Github</p>
+            </a>
         </div>
     </div>
     <footer>
         <p>&copy;Ripan Cosmin</p>
     </footer>
 </main>
-<script src="script.js"></script> 
+<script src="assets/js/script.js"></script> 
 </body>
 </html>
