--- a/index.html
+++ b/index.html
@@ -1,75 +1,172 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/e776c36ee4.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/css/style.css"> 
-    <title>Document</title>
-</head>
-<body>
-<nav class='topNav'>
-    <ul class='listNav'>
-        <li><a href=#>Main</a></li>
-        <li><a href='/assets/page/about.html'>About</a></li>
-        <li><a href=#>Contact</a></li>
-    </ul>
-</nav>
-<main class='mainContainer'>
-    <div class='informationContainer'>       
-        <h1 class='name'>Ripan Cosmin</h1>
-        <a href=# class='resume'>Resume</a>
-        <div class='socials'>
-            <a href=#><i class="fab fa-github fa-2x"></i></a>
-            <a href=#><i class="fab fa-linkedin-in fa-2x"></i></a>
-        </div>
-    </div> 
-    <div class='projectsContainer'>
-        <div class='project'>
-            <h3 class='projectName'>Rock Paper Robots</h3>
-            <img src='assets/images/rockpaperrobots.png'
-             alt='image of first project' class='screenshot'>
-             <a class='live' href=#>
-                <i class="fa fa-eye"></i>
-                <p class='liveLink'>Live Code</p>
-            </a>
-            <a class='code' href=#>
-                <i class="fab fa-github"></i>
-                <p class='gitLink'>Github</p>
-            </a>
-        </div>
-        <div class='project'>
-            <h3 class='projectName'>Paint-It</h3>
-            <img src='assets/images/paintit.png'
-             alt='image of second project' class='screenshot'>
-             <a class='live' href=#>
-                <i class="fa fa-eye"></i>
-                <p class='liveLink'>Live Code</p>
-            </a>
-            <a class='code' href=#>
-                <i class="fab fa-github"></i>
-                <p class='gitLink'>Github</p>
-            </a>
-        </div>
-        <div class='project'>
-            <h3 class='projectName'>Calculator</h3>
-            <img src='assets/images/calculator.png'
-             alt='image of third project' class='screenshot'>
-             <a class='live' href=#>
-                <i class="fa fa-eye"></i>
-                <p class='liveLink'>Live Code</p>
-            </a>
-            <a class='code' href=#>
-                <i class="fab fa-github"></i>
-                <p class='gitLink'>Github</p>
-            </a>
-        </div>
-    </div>
-    <footer>
-        <p>&copy;Ripan Cosmin</p>
-    </footer>
-</main>
-<script src="assets/js/script.js"></script> 
-</body>
+<!DOCTYPE HTML>
+<!--
+	Hyperspace by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>CosminRipan</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+
+		<!-- Sidebar -->
+			<section id="sidebar">
+				<div class="inner">
+					<nav>
+						<ul>
+							<li><a href="#intro">Welcome</a></li>
+							<li><a href="#one">Projects</a></li>
+							<li><a href="#two">About</a></li>
+							<li><a href="#three">Contact</a></li>
+						</ul>
+					</nav>
+				</div>
+			</section>
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Intro -->
+					<section id="intro" class="wrapper style1 fullscreen fade-up">
+						<div class="inner">
+							<h1>Cosmin Ripan</h1>
+							<p>Front End Developer.</p>
+							<ul class="actions">
+								<li><a href="#one" class="button scrolly">My Projects</a></li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- One -->
+					<section id="one" class="wrapper style2 spotlights">
+						<section>
+							<a href="#" class="image"><img src="images/rock.png" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Rock Paper Robots</h2>
+									<p>A futuristic Rock Paper Scissors played againts an AI.</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button"><i class="icon brands fa-github fa-2x"></i></a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/calculator.png" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Calculator</h2>
+									<p>A calculator with all the basic functions you would expect of one.</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button"><i class="icon brands fa-github fa-2x"></i></a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/paintit.png" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Paint-IT</h2>
+									<p>A canvas for all your artistic needs</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button"><i class="icon brands fa-github fa-2x"></i></a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+					</section>
+
+				<!-- Two -->
+					<section id="two" class="wrapper style3 fade-up">
+						<div class="inner">
+							<h2>About Me</h2>
+							<p>I am a front-end developer, currently employed full-time as an assistant manager, and a final year student at Babes-Bolyai University in Cluj-Napoca.</p>
+							
+						</div>
+					</section>
+
+				<!-- Three -->
+					<section id="three" class="wrapper style1 fade-up">
+						<div class="inner">
+							<h2>Get in touch</h2>
+							
+							<div class="split style1">
+								<section>
+									<form method="post" action="#">
+										<div class="fields">
+											<div class="field half">
+												<label for="name">Name</label>
+												<input type="text" name="name" id="name" />
+											</div>
+											<div class="field half">
+												<label for="email">Email</label>
+												<input type="text" name="email" id="email" />
+											</div>
+											<div class="field">
+												<label for="message">Message</label>
+												<textarea name="message" id="message" rows="5"></textarea>
+											</div>
+										</div>
+										<ul class="actions">
+											<li><a href="" class="button submit">Send Message</a></li>
+										</ul>
+									</form>
+								</section>
+								<section>
+									<ul class="contact">
+										<li>
+											<h3>Address</h3>
+											<span>Constantin Brancoveanu, 50<br />
+											Cluj-Napoca, Cluj<br />
+											Romania</span>
+										</li>
+										<li>
+											<h3>Email</h3>
+											<a href="mailto:cosminripan33@gmail.com">cosminripan33@gmail.com</a>
+										</li>
+										<li>
+											<h3>Phone</h3>
+											<span>(+4) 0746 023 696</span>
+										</li>
+										<li>
+											<h3>Social</h3>
+											<ul class="icons">
+												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+											</ul>
+										</li>
+									</ul>
+								</section>
+							</div>
+						</div>
+					</section>
+
+			</div>
+
+		<!-- Footer -->
+			<footer id="footer" class="wrapper style1-alt">
+				<div class="inner">
+					<ul class="menu">
+						<li>&copy; Cosmin Ripan.</li>
+					</ul>
+				</div>
+			</footer>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
