--- a/index.html
+++ b/index.html
@@ -45,37 +45,37 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/rock.png" alt="" data-position="center center" /></a>
+							<a href="https://csmnrpn.github.io/rock-paper/" class="image"><img src="images/rock.png" alt="screenshot of rock paper project" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Rock Paper Robots</h2>
 									<p>A futuristic Rock Paper Scissors played againts an AI.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button"><i class="icon brands fa-github fa-2x"></i></a></li>
+										<li><a href="https://github.com/Csmnrpn/rock-paper" class="button"><i class="icon brands fa-github fa-2x"></i></a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/calculator.png" alt="" data-position="top center" /></a>
+							<a href="https://csmnrpn.github.io/Calculator/" class="image"><img src="images/calculator.png" alt="screenshot of calculator project" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Calculator</h2>
 									<p>A calculator with all the basic functions you would expect of one.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button"><i class="icon brands fa-github fa-2x"></i></a></li>
+										<li><a href="https://github.com/Csmnrpn/Calculator" class="button"><i class="icon brands fa-github fa-2x"></i></a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/paintit.png" alt="" data-position="25% 25%" /></a>
+							<a href="https://csmnrpn.github.io/paint-it/" class="image"><img src="images/paintit.png" alt="screenshot of paintit project" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Paint-IT</h2>
 									<p>A canvas for all your artistic needs</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button"><i class="icon brands fa-github fa-2x"></i></a></li>
+										<li><a href="https://github.com/Csmnrpn/paint-it" class="button"><i class="icon brands fa-github fa-2x"></i></a></li>
 									</ul>
 								</div>
 							</div>
@@ -137,8 +137,8 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://www.facebook.com/cosmin.ripan" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+												<li><a href="https://github.com/Csmnrpn" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
