--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>About Me</h2>
-							<p>I am a front-end developer, currently employed full-time as an assistant manager, and a final year student at Babes-Bolyai University in Cluj-Napoca.</p>
+							<p>I am a front-end developer, currently employed full-time as an assistant manager, and a third year student at Babes-Bolyai University in Cluj-Napoca.</p>
 							
 						</div>
 					</section>
@@ -97,27 +97,6 @@
 							<h2>Get in touch</h2>
 							
 							<div class="split style1">
-								<section>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
 								<section>
 									<ul class="contact">
 										<li>
