added two more project to portofolio

--- a/index.html
+++ b/index.html
@@ -45,13 +45,25 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="https://csmnrpn.github.io/rock-paper/" class="image"><img src="images/rock.png" alt="screenshot of rock paper project" data-position="center center" /></a>
+							<a href="https://csmnrpn.github.io/TicTacToe/" class="image"><img src="images/tictac.png" alt="screenshot of TicTacToe project" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Rock Paper Robots</h2>
-									<p>A futuristic Rock Paper Scissors played againts an AI.</p>
+									<h2>Tic-Tac-Toe</h2>
+									<p>Just a normal Tic Tac Toe game</p>
 									<ul class="actions">
-										<li><a href="https://github.com/Csmnrpn/rock-paper" class="button"><i class="icon brands fa-github fa-2x"></i></a></li>
+										<li><a href="https://github.com/Csmnrpn/TicTacToe" class="button"><i class="icon brands fa-github fa-2x"></i></a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="https://csmnrpn.github.io/library/" class="image"><img src="images/library.png" alt="screenshot of library project" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Library</h2>
+									<p>An online library that uses local storage for persistent data</p>
+									<ul class="actions">
+										<li><a href="https://github.com/Csmnrpn/library" class="button"><i class="icon brands fa-github fa-2x"></i></a></li>
 									</ul>
 								</div>
 							</div>
@@ -68,6 +80,18 @@
 								</div>
 							</div>
 						</section>
+						<section>
+							<a href="https://csmnrpn.github.io/rock-paper/" class="image"><img src="images/rock.png" alt="screenshot of rock paper project" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Rock Paper Robots</h2>
+									<p>A futuristic Rock Paper Scissors played againts an AI.</p>
+									<ul class="actions">
+										<li><a href="https://github.com/Csmnrpn/rock-paper" class="button"><i class="icon brands fa-github fa-2x"></i></a></li>
+									</ul>
+								</div>
+							</div>
+						</section>						
 						<section>
 							<a href="https://csmnrpn.github.io/paint-it/" class="image"><img src="images/paintit.png" alt="screenshot of paintit project" data-position="25% 25%" /></a>
 							<div class="content">
@@ -110,15 +134,11 @@
 											<a href="mailto:cosminripan33@gmail.com">cosminripan33@gmail.com</a>
 										</li>
 										<li>
-											<h3>Phone</h3>
-											<span>(+4) 0746 023 696</span>
-										</li>
-										<li>
 											<h3>Social</h3>
 											<ul class="icons">
 												<li><a href="https://www.facebook.com/cosmin.ripan" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 												<li><a href="https://github.com/Csmnrpn" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://www.linkedin.com/in/cosmin-ripan-161739221" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
