added new project

--- a/index.html
+++ b/index.html
@@ -5,167 +5,187 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>CosminRipan</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Sidebar -->
-			<section id="sidebar">
-				<div class="inner">
-					<nav>
-						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Projects</a></li>
-							<li><a href="#two">About</a></li>
-							<li><a href="#three">Contact</a></li>
+<head>
+	<title>CosminRipan</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
+
+<body class="is-preload">
+
+	<!-- Sidebar -->
+	<section id="sidebar">
+		<div class="inner">
+			<nav>
+				<ul>
+					<li><a href="#intro">Welcome</a></li>
+					<li><a href="#one">Projects</a></li>
+					<li><a href="#two">About</a></li>
+					<li><a href="#three">Contact</a></li>
+				</ul>
+			</nav>
+		</div>
+	</section>
+
+	<!-- Wrapper -->
+	<div id="wrapper">
+
+		<!-- Intro -->
+		<section id="intro" class="wrapper style1 fullscreen fade-up">
+			<div class="inner">
+				<h1>Cosmin Ripan</h1>
+				<p>Front End Developer.</p>
+				<ul class="actions">
+					<li><a href="#one" class="button scrolly">My Projects</a></li>
+				</ul>
+			</div>
+		</section>
+
+		<!-- One -->
+		<section id="one" class="wrapper style2 spotlights">
+			<section>
+				<a href="https://csmnrpn.github.io/restaurant-page/" class="image"><img src="images/restaurant-page.png"
+						alt="screenshot of restaurant-page project" data-position="center center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Restaurant Menu</h2>
+						<p>A single-page application. All assets managed with webpack.</p>
+						<ul class="actions">
+							<li><a href="https://github.com/Csmnrpn/restaurant-page" class="button"><i
+										class="icon brands fa-github fa-2x"></i></a></li>
 						</ul>
-					</nav>
+					</div>
 				</div>
 			</section>
+			<section>
+				<a href="https://csmnrpn.github.io/TicTacToe/" class="image"><img src="images/tictac.png"
+						alt="screenshot of TicTacToe project" data-position="center center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Tic-Tac-Toe</h2>
+						<p>Just a normal Tic Tac Toe game</p>
+						<ul class="actions">
+							<li><a href="https://github.com/Csmnrpn/TicTacToe" class="button"><i
+										class="icon brands fa-github fa-2x"></i></a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<section>
+				<a href="https://csmnrpn.github.io/library/" class="image"><img src="images/library.png"
+						alt="screenshot of library project" data-position="center center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Library</h2>
+						<p>An online library that uses local storage for persistent data</p>
+						<ul class="actions">
+							<li><a href="https://github.com/Csmnrpn/library" class="button"><i
+										class="icon brands fa-github fa-2x"></i></a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<section>
+				<a href="https://csmnrpn.github.io/Calculator/" class="image"><img src="images/calculator.png"
+						alt="screenshot of calculator project" data-position="top center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Calculator</h2>
+						<p>A calculator with all the basic functions you would expect of one.</p>
+						<ul class="actions">
+							<li><a href="https://github.com/Csmnrpn/Calculator" class="button"><i
+										class="icon brands fa-github fa-2x"></i></a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<section>
+				<a href="https://csmnrpn.github.io/rock-paper/" class="image"><img src="images/rock.png"
+						alt="screenshot of rock paper project" data-position="center center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Rock Paper Robots</h2>
+						<p>A futuristic Rock Paper Scissors played againts an AI.</p>
+						<ul class="actions">
+							<li><a href="https://github.com/Csmnrpn/rock-paper" class="button"><i
+										class="icon brands fa-github fa-2x"></i></a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+		</section>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up">
-						<div class="inner">
-							<h1>Cosmin Ripan</h1>
-							<p>Front End Developer.</p>
-							<ul class="actions">
-								<li><a href="#one" class="button scrolly">My Projects</a></li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- One -->
-					<section id="one" class="wrapper style2 spotlights">
-						<section>
-							<a href="https://csmnrpn.github.io/TicTacToe/" class="image"><img src="images/tictac.png" alt="screenshot of TicTacToe project" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Tic-Tac-Toe</h2>
-									<p>Just a normal Tic Tac Toe game</p>
-									<ul class="actions">
-										<li><a href="https://github.com/Csmnrpn/TicTacToe" class="button"><i class="icon brands fa-github fa-2x"></i></a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="https://csmnrpn.github.io/library/" class="image"><img src="images/library.png" alt="screenshot of library project" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Library</h2>
-									<p>An online library that uses local storage for persistent data</p>
-									<ul class="actions">
-										<li><a href="https://github.com/Csmnrpn/library" class="button"><i class="icon brands fa-github fa-2x"></i></a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="https://csmnrpn.github.io/Calculator/" class="image"><img src="images/calculator.png" alt="screenshot of calculator project" data-position="top center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Calculator</h2>
-									<p>A calculator with all the basic functions you would expect of one.</p>
-									<ul class="actions">
-										<li><a href="https://github.com/Csmnrpn/Calculator" class="button"><i class="icon brands fa-github fa-2x"></i></a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="https://csmnrpn.github.io/rock-paper/" class="image"><img src="images/rock.png" alt="screenshot of rock paper project" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Rock Paper Robots</h2>
-									<p>A futuristic Rock Paper Scissors played againts an AI.</p>
-									<ul class="actions">
-										<li><a href="https://github.com/Csmnrpn/rock-paper" class="button"><i class="icon brands fa-github fa-2x"></i></a></li>
-									</ul>
-								</div>
-							</div>
-						</section>						
-						<section>
-							<a href="https://csmnrpn.github.io/paint-it/" class="image"><img src="images/paintit.png" alt="screenshot of paintit project" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Paint-IT</h2>
-									<p>A canvas for all your artistic needs</p>
-									<ul class="actions">
-										<li><a href="https://github.com/Csmnrpn/paint-it" class="button"><i class="icon brands fa-github fa-2x"></i></a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-					</section>
-
-				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
-						<div class="inner">
-							<h2>About Me</h2>
-							<p>I am a front-end developer, currently employed full-time as an assistant manager, and a third year student at Babes-Bolyai University in Cluj-Napoca.</p>
-							
-						</div>
-					</section>
-
-				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
-						<div class="inner">
-							<h2>Get in touch</h2>
-							
-							<div class="split style1">
-								<section>
-									<ul class="contact">
-										<li>
-											<h3>Address</h3>
-											<span>Constantin Brancoveanu, 50<br />
-											Cluj-Napoca, Cluj<br />
-											Romania</span>
-										</li>
-										<li>
-											<h3>Email</h3>
-											<a href="mailto:cosminripan33@gmail.com">cosminripan33@gmail.com</a>
-										</li>
-										<li>
-											<h3>Social</h3>
-											<ul class="icons">
-												<li><a href="https://www.facebook.com/cosmin.ripan" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="https://github.com/Csmnrpn" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="https://www.linkedin.com/in/cosmin-ripan-161739221" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-											</ul>
-										</li>
-									</ul>
-								</section>
-							</div>
-						</div>
-					</section>
+		<!-- Two -->
+		<section id="two" class="wrapper style3 fade-up">
+			<div class="inner">
+				<h2>About Me</h2>
+				<p>I am a front-end developer, currently employed full-time as an assistant manager, and a third year
+					student at Babes-Bolyai University in Cluj-Napoca.</p>
 
 			</div>
+		</section>
 
-		<!-- Footer -->
-			<footer id="footer" class="wrapper style1-alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Cosmin Ripan.</li>
-					</ul>
+		<!-- Three -->
+		<section id="three" class="wrapper style1 fade-up">
+			<div class="inner">
+				<h2>Get in touch</h2>
+
+				<div class="split style1">
+					<section>
+						<ul class="contact">
+							<li>
+								<h3>Address</h3>
+								<span>Constantin Brancoveanu, 50<br />
+									Cluj-Napoca, Cluj<br />
+									Romania</span>
+							</li>
+							<li>
+								<h3>Email</h3>
+								<a href="mailto:cosminripan33@gmail.com">cosminripan33@gmail.com</a>
+							</li>
+							<li>
+								<h3>Social</h3>
+								<ul class="icons">
+									<li><a href="https://www.facebook.com/cosmin.ripan"
+											class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
+									</li>
+									<li><a href="https://github.com/Csmnrpn" class="icon brands fa-github"><span
+												class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/cosmin-ripan-161739221"
+											class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
+									</li>
+								</ul>
+							</li>
+						</ul>
+					</section>
 				</div>
-			</footer>
+			</div>
+		</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	</div>
 
-	</body>
+	<!-- Footer -->
+	<footer id="footer" class="wrapper style1-alt">
+		<div class="inner">
+			<ul class="menu">
+				<li>&copy; Cosmin Ripan.</li>
+			</ul>
+		</div>
+	</footer>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
